force-app/main/default/objects/Asistencia__c/Asistencia__c.object-meta.xml
<CustomObject>
    <label>Asistencia</label>
    <nameField>
        <label>Asistencia</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asistencia</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>