force-app/main/default/objects/Asistencia__c/fields/Alumno__c.field-meta.xml
<CustomField>
    <fullName>Alumno__c</fullName>
    <label>Alumno</label>
    <referenceTo>Alumno__c</referenceTo>
    <relationshipLabel>Asistencia</relationshipLabel>
    <relationshipName>Asistencia</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>