force-app/main/default/objects/Asistencia__c/fields/HoraEntrada__c.field-meta.xml
<CustomField>
    <fullName>HoraEntrada__c</fullName>
    <defaultValue>TIMENOW()</defaultValue>
    <label>Hora de Entrada</label>
    <type>Time</type>
</CustomField>