force-app/main/default/objects/Asistencia__c/fields/MetodoRegistro__c.field-meta.xml
<CustomField>
    <fullName>MetodoRegistro__c</fullName>
    <label>MetodoRegistro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cédula</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>QR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>